# Aurialis

./: .env.production  .gitignore  README.md  docker-compose.yml  eslint.config.mjs  index.html  next.config.ts  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vitest.config.ts  wrangler.jsonc
backend/: .coverage  .dockerignore  DEPLOY.md  Dockerfile  README.md  deep_analysis.py  jobs.py  main.py  observability.py  package.json  pnpm-lock.yaml  pyproject.toml  r2-cors.json  r2-lifecycle.json  r2_download.py  requirements.txt  script_generator.py  separation.py  stem_artifacts.py  tsconfig.json  validation.py  vitest.worker.config.ts  worker-configuration.d.ts  wrangler.jsonc
backend/profiles/: hip_hop_low_end.json  indie_warmth.json  metal_wall.json  modern_pop_polish.json  pop_punk_air.json
backend/schemas/: mastering_script.schema.json
backend/scripts/: provision-r2.sh
backend/src/: cors.ts  env-secrets.d.ts  metrics.ts  r2-presign.ts  rate-limit-do.ts  turnstile.ts  worker.ts
backend/src/__tests__/: test-types.d.ts  upload-control-plane.test.ts
backend/tests/: conftest.py  test_cancel.py  test_deep_analysis.py  test_main.py  test_observability.py  test_schema_parity.py  test_script_generator.py  test_stem_artifacts.py  test_validation.py
backend/tests/fixtures/: mastering_script_minimal.json
backend/tests/postman/: aurialis-backend.postman_collection.json  run-newman.sh
backend/tests/postman/environments/: ci.postman_environment.json  local.postman_environment.json  production.postman_environment.json
(+291 files in other folders)
