[project]
name = "aurialis-backend"
version = "0.1.0"
description = "Aurialis Smart Split + Deep Analysis backend"
requires-python = ">=3.12"

[tool.pytest.ini_options]
markers = [
    "unit: pure-Python unit test, no external services or heavy ML deps",
    "integration: end-to-end test that exercises the FastAPI surface or background workers",
]
testpaths = ["tests"]
addopts = "-q"
